# evaluation

./: README.md  pyproject.toml
configs/: autoattack_example.yaml
data/: aimo-2025-reference.jsonl  aimo-2025-reference___distract=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___distract=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___domain=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___domain=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___expert_no_solution.jsonl  aimo-2025-reference___expert_perturbations.jsonl  aimo-2025-reference___rename=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___rename=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___rephrase=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___rephrase=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___typos=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___typos=gpt-5.2-2025-12-11:low.jsonl  aimo-2026-reference.jsonl
notebooks/: play.ipynb
predictions/: aimo-2025-reference___distract=gemini-3.1-pro-preview:low___eval=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___distract=gemini-3.1-pro-preview:low___eval=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___distract=gpt-5.2-2025-12-11:low___eval=gemini-3.1-pro-preview:low.jsonl  aimo-2025-reference___distract=gpt-5.2-2025-12-11:low___eval=glm-4.7:low.jsonl  aimo-2025-reference___distract=gpt-5.2-2025-12-11:low___eval=gpt-5.2-2025-12-11:low.jsonl  aimo-2025-reference___distract=gpt-5.2-2025-12-11:low___eval=gpt-oss-120b:low.jsonl  aimo-2025-reference___eval=gemini-3.1-pro-preview:low.jsonl  (+37 more)
(+33 files in other folders)
