[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]
